# LPSharp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Clp.vcxproj  DESIGN.md  LICENSE  LPSharp.sln  README.md  libClp.vcxproj  libCoinUtils.vcxproj  run.ps1
CLP/: CMakeLists.txt  Clp.sln  README.md
CLP/CoinWrap/: CMakeLists.txt  Version.txt
CLP/CoinWrap/cmake/: dotnet.cmake  swig.cmake  version.cmake
CLP/CoinWrap/cpp/: CMakeLists.txt  clp_interface.cc  clp_interface.h  clp_model_builder.cc  clp_model_builder.h  clp_solve_model_test.cc  coin_wrap.cc
CLP/CoinWrap/cpp/tests/: 80bau38.mps  clp_build_model_test.cc  clp_solve_model_test.cc
CLP/CoinWrap/csharp/: CMakeLists.txt  ClpInterface.cs  CoinOr.Clp.csproj.in  CoinOr.Clp.runtime.csproj.in  Directory.Build.props.in  clp_interface.i  clp_interface_wrap.cc
CLP/CoinWrap/src/: clp_interface.cc  clp_interface.h  coin_wrap.cc
CLP/cmake/: cpp.cmake  dotnet.cmake  version.cmake
GLOP/: CMakeLists.txt  Glop.sln  README.md  Version.txt
GLOP/cmake/: cpp.cmake  deps.cmake  dotnet.cmake  glop.cmake  utils.cmake
GLOP/cmake/dependencies/: CMakeLists.txt
GLOP/examples/: CMakeLists.txt
GLOP/examples/glop_solve/: example_params.txt  glop_solve.cc
GLOP/examples/glopsolve/: CMakeLists.txt  example_params.txt  glop_solve.cc
GLOP/ortools/base/: CMakeLists.txt
GLOP/ortools/dotnet/: Directory.Build.props.in  Google.OrTools.Glop.csproj.in  Google.OrTools.Glop.runtime.csproj.in  Google.OrTools.csproj.in
GLOP/ortools/glop/: CMakeLists.txt  parameters.proto  revised_simplex.cc  revised_simplex.h  variable_values.cc
GLOP/ortools/linear_solver/: CMakeLists.txt  linear_solver.cc
GLOP/ortools/linear_solver/csharp/: CMakeLists.txt  LinearConstraint.cs  LinearExpr.cs  SolverHelper.cs  VariableHelper.cs  linear_solver.i
GLOP/ortools/lp_data/: CMakeLists.txt  sparse_vector.h
GLOP/ortools/port/: CMakeLists.txt
GLOP/ortools/util/: CMakeLists.txt
GLOP/ortools/util/csharp/: CMakeLists.txt
GLOP/patches/: glop-0-initial.patch  glop-1-version.patch  glop-2-log_iteration_period.patch  glop-3-read_mps.patch  glop_rebase.py  wanlp_rebase.py
LPBench/: README.md  netlib_results.csv  plato_results.csv  plot_lpbench.py  results_i7.csv  wanlpv2_results.csv
LPBench/logs/: clp_datt256_lp.txt  clp_mittelmann.txt  clp_netlib.txt  clp_qap15.txt  clp_rmine15_lp.txt  clp_s250r10.txt  clp_wanlp.txt  clp_wanlpv2.txt  clp_wanlpv2_edge.txt  clp_wanlpv2_sliceperf.txt  clp_wanlpv2_sonal.txt  glop_dual_wanlp.txt  glop_lpsharp_plato.txt  glop_mittelmann.txt  glop_netlib.txt  glop_wanlp.txt
LPDriver/Contract/: MpsTypes.cs  SolverImplementation.cs  SparseVector.cs
LPDriver/Model/: LPDriver.cs  LPModel.cs  MpsReader.cs
LPSharp/: .gitignore  Directory.Packages.props  README.md  dirs.sln  global.json  nuget.config  run.ps1  stylecop.json  stylecop.ruleset
LPSharp/LPDriver/: LPDriver.csproj
LPSharp/LPDriver.UT/: LPDriverTest.cs  LPDriverTest.csproj
LPSharp/LPDriver/Contract/: GlopParameters.cs  ILPDriver.cs  ILPInterface.cs  LPAlgorithm.cs  LPConstant.cs  LPMetric.cs  LPResultStatus.cs  MpsTypes.cs  Param.cs  SolverImplementation.cs  SolverParameter.cs  SolverParameters.cs  SolverType.cs  SparseVector.cs
LPSharp/LPDriver/Model/: ClpInterface.cs  ClpSolver.cs  ExecutionResult.cs  GlopSolver.cs  LPDriver.cs  LPModel.cs  LPModelComparer.cs  LPSharpException.cs  LPSolverAbstract.cs  MpsReader.cs  OrtoolsSolver.cs  SparseMatrix.cs  SparseVector.cs  TestSolver.cs  Utility.cs
LPSharp/Powershell/: ClearAll.cs  ClearModels.cs  CompareModels.cs  GetModels.cs  GetMps.cs  GetResults.cs  GetSolvers.cs  InvokeSolver.cs  LPCmdlet.cs  NewSolver.cs  Powershell.csproj  ReadMps.cs  ReadParameters.cs  SetModel.cs  SetSolver.cs  WriteParameters.cs
LPSharp/PowershellConsole/: AuthManager.cs  HostUserInterface.cs  PowershellConsole.cs  PowershellConsole.csproj  PowershellHost.cs  Program.cs  RawUserInterface.cs
LPSharp/UnitTests/LPDriverTest/: ClpSolverTest.cs  GlopSolverTest.cs  LPDriverTest.cs  LPDriverTest.csproj  LPModelComparerTest.cs  LPModelTest.cs  MpsReaderTest.cs  SparseMatrixTest.cs  SparseVectorTest.cs  TestUtil.cs
LPSharp/UnitTests/TestData/: ken-07.mps  pds-02.mps  testfree.mps  wander-primal1.mps  wander-primal2.mps
LPSharp/settings/: build-settings.props  build-settings.xml  stylecop.json  stylecop.ruleset
Powershell/: Powershell.csproj  ReadMps.cs
PowershellConsole/: AuthManager.cs  HostUserInterface.cs  PowershellConsole.csproj  Program.cs
UnitTests/LPDriverTest/: LPDriverTest.csproj  LPModelTest.cs  MpsReaderTest.cs
docs/: Building-CLP.md  Building-GLOP.md  Building-LPSharp-Powershell-Console.md  CLP-solver-change-summary.md  CMake-cheatsheet.md  CoinWrap-C#-interface-to-CLP.md  Dotnet-cheatsheet.md  GLOP-solver-change-summary.md  Git-Submodule-cheatsheet.md  Home.md  LP-benchmark-results.md  LPSharp-Powershell-Cmdlets-Guide.md  LPSharp-Powershell-Console.md  LPSharp-background.md  Merging-new-CLP-code.md  Merging-new-GLOP-code.md  README.md  Standalone-GLOP-cheatsheet.md
examples/: CMakeLists.txt
src/: CMakeLists.txt  ClpMain.cpp  ClpSolve.hpp  ClpSolver.cpp  Idiot.cpp
